# tau-clients

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish-to-test-pypi.yml
data/: report2.txt  result1.txt  result2.txt  task_uuid1.json  tau_clients.ini.template  techniques_galaxy.json
examples/: download_artifacts.py  submit_samples.py
scripts/: run_clients.py
src/tau_clients/: __init__.py  decoders.py  exceptions.py  parsers.py
src/tau_clients/nsx_ata/: __init__.py
src/tau_clients/nsx_defender/: __init__.py
tests/: test_clients.py  test_decoders.py  test_live_clients.py  test_nsx_ata.py  test_nsx_defender_clients.py  test_parsers.py
