[build-system]
requires = [
    "setuptools>=42",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py36, py39
isolated_build = True

[testenv]
commands=nosetests
extras=misp
deps=
    ddt
    mock
    nose
"""

[tool.black]
line-length = 98
include = "\\.pyi?$"
exclude = """
/(
    \\.git
  | \\.hg
  | \\.mypy_cache
  | \\.tox
  | \\.venv
  | _build
  | buck-out
  | build
  | dist
)/
"""
