[metadata]
name = tau-clients
version = 0.1.2
author = Stefano Ortolani
description = Set of clients to interface with various VMware products
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vmware-samples/tau-clients
project_urls =
    Bug Tracker = https://github.com/vmware-samples/tau-clients/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Topic :: Security
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests
    more-itertools

[options.packages.find]
where = src

[nosetests]
attr=!live
